// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin adds __typename selections for abstract types 1`] = `
"(AbstractTypeDocument as any).__relay = (function(){
var v0 = [
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"id\\",
    \\"value\\": \\"42\\"
  }
],
v1 = {
  \\"alias\\": null,
  \\"args\\": null,
  \\"kind\\": \\"ScalarField\\",
  \\"name\\": \\"id\\",
  \\"storageKey\\": null
};
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"AbstractType\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": null,
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"node\\",
        \\"plural\\": false,
        \\"selections\\": [
          (v1/*: any*/)
        ],
        \\"storageKey\\": \\"node(id:\\\\\\"42\\\\\\")\\"
      }
    ],
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"AbstractType\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": null,
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"node\\",
        \\"plural\\": false,
        \\"selections\\": [
          {
            \\"alias\\": null,
            \\"args\\": null,
            \\"kind\\": \\"ScalarField\\",
            \\"name\\": \\"__typename\\",
            \\"storageKey\\": null
          },
          (v1/*: any*/)
        ],
        \\"storageKey\\": \\"node(id:\\\\\\"42\\\\\\")\\"
      }
    ]
  },
  \\"params\\": {
    \\"cacheID\\": \\"41ed723f5e2c84c1b0502a56f1679ab9\\",
    \\"metadata\\": {},
    \\"name\\": \\"AbstractType\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": null
  }
};
})();
(AbstractTypeDocument as any).__relay.hash = \\"c91a37574a4f8ff1642b0a0dd933f8b0\\";"
`;

exports[`plugin emits connection metadata 1`] = `
"(ConnectionQueryDocument as any).__relay = (function(){
var v0 = [
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"id\\",
    \\"value\\": \\"42\\"
  }
],
v1 = [
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"first\\",
    \\"value\\": 10
  },
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"sort\\",
    \\"value\\": \\"DESC\\"
  }
],
v2 = {
  \\"alias\\": null,
  \\"args\\": null,
  \\"kind\\": \\"ScalarField\\",
  \\"name\\": \\"id\\",
  \\"storageKey\\": null
};
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"ConnectionQuery\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": \\"Conversation\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"conversation\\",
        \\"plural\\": false,
        \\"selections\\": [
          {
            \\"args\\": null,
            \\"kind\\": \\"FragmentSpread\\",
            \\"name\\": \\"Messages_conversation\\"
          }
        ],
        \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
      }
    ],
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"ConnectionQuery\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": \\"Conversation\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"conversation\\",
        \\"plural\\": false,
        \\"selections\\": [
          {
            \\"alias\\": null,
            \\"args\\": (v1/*: any*/),
            \\"concreteType\\": \\"MessagesConnection\\",
            \\"kind\\": \\"LinkedField\\",
            \\"name\\": \\"messages\\",
            \\"plural\\": false,
            \\"selections\\": [
              {
                \\"alias\\": null,
                \\"args\\": null,
                \\"concreteType\\": \\"MessagesConnectionEdge\\",
                \\"kind\\": \\"LinkedField\\",
                \\"name\\": \\"edges\\",
                \\"plural\\": true,
                \\"selections\\": [
                  {
                    \\"alias\\": null,
                    \\"args\\": null,
                    \\"concreteType\\": \\"Message\\",
                    \\"kind\\": \\"LinkedField\\",
                    \\"name\\": \\"node\\",
                    \\"plural\\": false,
                    \\"selections\\": [
                      (v2/*: any*/),
                      {
                        \\"alias\\": null,
                        \\"args\\": null,
                        \\"kind\\": \\"ScalarField\\",
                        \\"name\\": \\"__typename\\",
                        \\"storageKey\\": null
                      }
                    ],
                    \\"storageKey\\": null
                  },
                  {
                    \\"alias\\": null,
                    \\"args\\": null,
                    \\"kind\\": \\"ScalarField\\",
                    \\"name\\": \\"cursor\\",
                    \\"storageKey\\": null
                  }
                ],
                \\"storageKey\\": null
              },
              {
                \\"alias\\": null,
                \\"args\\": null,
                \\"concreteType\\": \\"PageInfo\\",
                \\"kind\\": \\"LinkedField\\",
                \\"name\\": \\"pageInfo\\",
                \\"plural\\": false,
                \\"selections\\": [
                  {
                    \\"alias\\": null,
                    \\"args\\": null,
                    \\"kind\\": \\"ScalarField\\",
                    \\"name\\": \\"endCursor\\",
                    \\"storageKey\\": null
                  },
                  {
                    \\"alias\\": null,
                    \\"args\\": null,
                    \\"kind\\": \\"ScalarField\\",
                    \\"name\\": \\"hasNextPage\\",
                    \\"storageKey\\": null
                  }
                ],
                \\"storageKey\\": null
              }
            ],
            \\"storageKey\\": \\"messages(first:10,sort:\\\\\\"DESC\\\\\\")\\"
          },
          {
            \\"alias\\": null,
            \\"args\\": (v1/*: any*/),
            \\"filters\\": [
              \\"sort\\"
            ],
            \\"handle\\": \\"connection\\",
            \\"key\\": \\"Connection_messages\\",
            \\"kind\\": \\"LinkedHandle\\",
            \\"name\\": \\"messages\\"
          },
          (v2/*: any*/)
        ],
        \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
      }
    ]
  },
  \\"params\\": {
    \\"cacheID\\": \\"43ab8e669ba37d9ddcc97c84fbe9fdaa\\",
    \\"metadata\\": {},
    \\"name\\": \\"ConnectionQuery\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": null
  }
};
})();
(ConnectionQueryDocument as any).__relay.hash = \\"92a5e49e4f1cf92c658352a198250cad\\";
(Messages_conversationFragmentDoc as any).__relay = {
  \\"argumentDefinitions\\": [],
  \\"kind\\": \\"Fragment\\",
  \\"metadata\\": {
    \\"connection\\": [
      {
        \\"count\\": null,
        \\"cursor\\": null,
        \\"direction\\": \\"forward\\",
        \\"path\\": [
          \\"messages\\"
        ]
      }
    ]
  },
  \\"name\\": \\"Messages_conversation\\",
  \\"selections\\": [
    {
      \\"alias\\": \\"messages\\",
      \\"args\\": [
        {
          \\"kind\\": \\"Literal\\",
          \\"name\\": \\"sort\\",
          \\"value\\": \\"DESC\\"
        }
      ],
      \\"concreteType\\": \\"MessagesConnection\\",
      \\"kind\\": \\"LinkedField\\",
      \\"name\\": \\"__Connection_messages_connection\\",
      \\"plural\\": false,
      \\"selections\\": [
        {
          \\"alias\\": null,
          \\"args\\": null,
          \\"concreteType\\": \\"MessagesConnectionEdge\\",
          \\"kind\\": \\"LinkedField\\",
          \\"name\\": \\"edges\\",
          \\"plural\\": true,
          \\"selections\\": [
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"concreteType\\": \\"Message\\",
              \\"kind\\": \\"LinkedField\\",
              \\"name\\": \\"node\\",
              \\"plural\\": false,
              \\"selections\\": [
                {
                  \\"alias\\": null,
                  \\"args\\": null,
                  \\"kind\\": \\"ScalarField\\",
                  \\"name\\": \\"id\\",
                  \\"storageKey\\": null
                },
                {
                  \\"alias\\": null,
                  \\"args\\": null,
                  \\"kind\\": \\"ScalarField\\",
                  \\"name\\": \\"__typename\\",
                  \\"storageKey\\": null
                }
              ],
              \\"storageKey\\": null
            },
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"kind\\": \\"ScalarField\\",
              \\"name\\": \\"cursor\\",
              \\"storageKey\\": null
            }
          ],
          \\"storageKey\\": null
        },
        {
          \\"alias\\": null,
          \\"args\\": null,
          \\"concreteType\\": \\"PageInfo\\",
          \\"kind\\": \\"LinkedField\\",
          \\"name\\": \\"pageInfo\\",
          \\"plural\\": false,
          \\"selections\\": [
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"kind\\": \\"ScalarField\\",
              \\"name\\": \\"endCursor\\",
              \\"storageKey\\": null
            },
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"kind\\": \\"ScalarField\\",
              \\"name\\": \\"hasNextPage\\",
              \\"storageKey\\": null
            }
          ],
          \\"storageKey\\": null
        }
      ],
      \\"storageKey\\": \\"__Connection_messages_connection(sort:\\\\\\"DESC\\\\\\")\\"
    }
  ],
  \\"type\\": \\"Conversation\\",
  \\"abstractKey\\": null
};
(Messages_conversationFragmentDoc as any).__relay.hash = \\"6a0174c53079bd79d3c131049bc2ca8a\\";"
`;

exports[`plugin generates a ConcreteRequest for an operation 1`] = `
"(SomeQueryDocument as any).__relay = (function(){
var v0 = [
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"id\\",
    \\"value\\": \\"42\\"
  }
],
v1 = {
  \\"alias\\": null,
  \\"args\\": null,
  \\"kind\\": \\"ScalarField\\",
  \\"name\\": \\"id\\",
  \\"storageKey\\": null
};
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"SomeQuery\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": \\"Conversation\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"conversation\\",
        \\"plural\\": false,
        \\"selections\\": [
          {
            \\"args\\": null,
            \\"kind\\": \\"FragmentSpread\\",
            \\"name\\": \\"ConversationFragment\\"
          }
        ],
        \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
      }
    ],
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"SomeQuery\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": \\"Conversation\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"conversation\\",
        \\"plural\\": false,
        \\"selections\\": [
          (v1/*: any*/),
          {
            \\"alias\\": null,
            \\"args\\": [
              {
                \\"kind\\": \\"Literal\\",
                \\"name\\": \\"first\\",
                \\"value\\": 10
              }
            ],
            \\"concreteType\\": \\"MessagesConnection\\",
            \\"kind\\": \\"LinkedField\\",
            \\"name\\": \\"messages\\",
            \\"plural\\": false,
            \\"selections\\": [
              {
                \\"alias\\": null,
                \\"args\\": null,
                \\"concreteType\\": \\"MessagesConnectionEdge\\",
                \\"kind\\": \\"LinkedField\\",
                \\"name\\": \\"edges\\",
                \\"plural\\": true,
                \\"selections\\": [
                  {
                    \\"alias\\": null,
                    \\"args\\": null,
                    \\"concreteType\\": \\"Message\\",
                    \\"kind\\": \\"LinkedField\\",
                    \\"name\\": \\"node\\",
                    \\"plural\\": false,
                    \\"selections\\": [
                      {
                        \\"alias\\": null,
                        \\"args\\": null,
                        \\"kind\\": \\"ScalarField\\",
                        \\"name\\": \\"text\\",
                        \\"storageKey\\": null
                      },
                      (v1/*: any*/)
                    ],
                    \\"storageKey\\": null
                  }
                ],
                \\"storageKey\\": null
              }
            ],
            \\"storageKey\\": \\"messages(first:10)\\"
          }
        ],
        \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
      }
    ]
  },
  \\"params\\": {
    \\"cacheID\\": \\"ded85d51e7178c1af0a51c886c13e5e4\\",
    \\"metadata\\": {},
    \\"name\\": \\"SomeQuery\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": null
  }
};
})();
(SomeQueryDocument as any).__relay.hash = \\"6c07723a7bd8b9835435b0609791ea26\\";"
`;

exports[`plugin generates a ReaderFragment for a fragment 1`] = `
"(ConversationFragmentFragmentDoc as any).__relay = {
  \\"argumentDefinitions\\": [],
  \\"kind\\": \\"Fragment\\",
  \\"metadata\\": null,
  \\"name\\": \\"ConversationFragment\\",
  \\"selections\\": [
    {
      \\"alias\\": null,
      \\"args\\": null,
      \\"kind\\": \\"ScalarField\\",
      \\"name\\": \\"id\\",
      \\"storageKey\\": null
    },
    {
      \\"alias\\": null,
      \\"args\\": [
        {
          \\"kind\\": \\"Literal\\",
          \\"name\\": \\"first\\",
          \\"value\\": 10
        }
      ],
      \\"concreteType\\": \\"MessagesConnection\\",
      \\"kind\\": \\"LinkedField\\",
      \\"name\\": \\"messages\\",
      \\"plural\\": false,
      \\"selections\\": [
        {
          \\"alias\\": null,
          \\"args\\": null,
          \\"concreteType\\": \\"MessagesConnectionEdge\\",
          \\"kind\\": \\"LinkedField\\",
          \\"name\\": \\"edges\\",
          \\"plural\\": true,
          \\"selections\\": [
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"concreteType\\": \\"Message\\",
              \\"kind\\": \\"LinkedField\\",
              \\"name\\": \\"node\\",
              \\"plural\\": false,
              \\"selections\\": [
                {
                  \\"args\\": null,
                  \\"kind\\": \\"FragmentSpread\\",
                  \\"name\\": \\"MessageFragment\\"
                }
              ],
              \\"storageKey\\": null
            }
          ],
          \\"storageKey\\": null
        }
      ],
      \\"storageKey\\": \\"messages(first:10)\\"
    }
  ],
  \\"type\\": \\"Conversation\\",
  \\"abstractKey\\": null
};
(ConversationFragmentFragmentDoc as any).__relay.hash = \\"3070480a90158780c7529708ea80c630\\";"
`;

exports[`plugin handles multiple operations in a single document 1`] = `
"(QueryOneDocument as any).__relay = (function(){
var v0 = [
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"id\\",
    \\"value\\": \\"42\\"
  }
],
v1 = {
  \\"alias\\": null,
  \\"args\\": null,
  \\"kind\\": \\"ScalarField\\",
  \\"name\\": \\"__typename\\",
  \\"storageKey\\": null
};
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"QueryOne\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": \\"Conversation\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"conversation\\",
        \\"plural\\": false,
        \\"selections\\": [
          (v1/*: any*/)
        ],
        \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
      }
    ],
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"QueryOne\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": \\"Conversation\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"conversation\\",
        \\"plural\\": false,
        \\"selections\\": [
          (v1/*: any*/),
          {
            \\"alias\\": null,
            \\"args\\": null,
            \\"kind\\": \\"ScalarField\\",
            \\"name\\": \\"id\\",
            \\"storageKey\\": null
          }
        ],
        \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
      }
    ]
  },
  \\"params\\": {
    \\"cacheID\\": \\"2ce7aba0ae94e184e092aaa4b36cbf96\\",
    \\"metadata\\": {},
    \\"name\\": \\"QueryOne\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": null
  }
};
})();
(QueryOneDocument as any).__relay.hash = \\"8963b9c1deb364dc049cc34e260b1e95\\";
(QueryTwoDocument as any).__relay = (function(){
var v0 = [
  {
    \\"alias\\": null,
    \\"args\\": [
      {
        \\"kind\\": \\"Literal\\",
        \\"name\\": \\"id\\",
        \\"value\\": \\"42\\"
      }
    ],
    \\"concreteType\\": \\"Conversation\\",
    \\"kind\\": \\"LinkedField\\",
    \\"name\\": \\"conversation\\",
    \\"plural\\": false,
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": null,
        \\"kind\\": \\"ScalarField\\",
        \\"name\\": \\"id\\",
        \\"storageKey\\": null
      }
    ],
    \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
  }
];
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"QueryTwo\\",
    \\"selections\\": (v0/*: any*/),
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"QueryTwo\\",
    \\"selections\\": (v0/*: any*/)
  },
  \\"params\\": {
    \\"cacheID\\": \\"eec8fc9912245b00c9ee5f2781f183e7\\",
    \\"metadata\\": {},
    \\"name\\": \\"QueryTwo\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": null
  }
};
})();
(QueryTwoDocument as any).__relay.hash = \\"3a8ddb99df51e47db330fdb0844db7e5\\";"
`;
